completed contact.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,16 @@
 <body>
 	<header>
 	<h2 class =" name">Chris Hasler</h2>
+		<nav>
+			<a href = "index.html">About  |</a>
+			<a href = "portfolio.html">Portfolio   |</a>
+			<a href = "contact.html">Contact </a>	
+		</nav>
 	</header
 
-
+	
+	clear:both
+	overflow:auto
 	
 </body>
 </html>
