--- a/index.html
+++ b/index.html
@@ -20,13 +20,10 @@
 	<div class = "aboutMe">	
 		<h2 class ="aboutMeTitle">About me </h2>
 		<img class = "profPicture" src ="assets/images/profile_pic.jpg" alt = "profile picture">
-		<p> My name is Chris Hasler, and I am currently looking for a job in web development. I currently manaage both rental properties and farm lands with my father, which we have been able to expand from one farm properties to seven revenue streams. We have been lucky to create a considerable about of passive income through government programs and rental market.   
-
-		
-
-		In my spare time I build furniture with my wife, play violin and enjoying playing sports like beach volleyball.
-
-		 </p>
+		<p> My name is Chris Hasler, and I am starting a career in web development.  I currently manage properties with my father. We have expanded from one farm property into seven rental areas, by capitalizing on government programs and housing market opportunities. This job has developed my skills in negotation, sales, money management, and the grit to "get it done." I also have medical experience as a firefighter EMT and an exercise specialist, education experience as a teacher and assistant to special needs and handicapped children, and a Bachelors Degree in Biomechanics focusing on kinematic research. I hope to supplement my work experiences with skills I have developed as a UCF Bootcamp graduate and other UCF computer science course work that I have completes.  
+		</p>
+		<p>
+		In my spare time I build furniture with my wife, play violin, and play beach volleyball with my college friends. I also bought a 3-D printer and enjoy making art or science projects.</p>
 	</div>
 
 	<div class = "connect">
