--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<header>
 		<h2 class = "name">Chris Hasler</h2>
 		<nav>
-			<a href = "index.html">About  |</a>
-			<a href = "portfolio.html">Portfolio   |</a>
+			<a href = "index.html">About     |</a>
+			<a href = "portfolio.html">Portfolio      |</a>
 			<a href = "contact.html">Contact   </a>
 		</nav>
 	</header>
@@ -23,7 +23,7 @@
 		<p> My name is Chris Hasler, and I am starting a career in web development.  I currently manage properties with my father. We have expanded from one farm property into seven rental areas, by capitalizing on government programs and housing market opportunities. This job has developed my skills in negotation, sales, money management, and the grit to "get it done." I also have medical experience as a firefighter EMT and an exercise specialist, education experience as a teacher and assistant to special needs and handicapped children, and a Bachelors Degree in Biomechanics focusing on kinematic research. I hope to supplement my work experiences with skills I have developed as a UCF Bootcamp graduate and other UCF computer science course work that I have completes.  
 		</p>
 		<p>
-		In my spare time I build furniture with my wife, play violin, and play beach volleyball with my college friends. I also bought a 3-D printer and enjoy making art or science projects.</p>
+		In my spare time I build furniture with my wife, play violin, and play beach volleyball with my college friends. I also recently bought a 3-D printer and enjoy making art or science projects with it.</p>
 	</div>
 
 	<div class = "connect">
