changed stack.png 3rd attempt

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </a>
 
          	<a href="https://stackoverflow.com/users/7710348/chris-hasler?tab=profile" target="_blank">
-            	<img id="stack" src="assets\images\Stack.png" target="_blank" alt="Stack Overflow">
+            	<img id="stack" src="assets\images\stack.png" target="_blank" alt="Stack Overflow">
             </a>
 
         </div> 
